--- a/src/main/webapp/WEB-INF/views/people/index.html
+++ b/src/main/webapp/WEB-INF/views/people/index.html
@@ -7,12 +7,13 @@
 <body>
 
 <div th:each="person : ${people}">
-  <a> th:href="@{/people/{id}(id=${person.getId()})}" th:text="${person.getName()}"user</a>
+  <a th:href="@{/people/{id}(id=${person.getId()})}"
+      th:text="${person.getName()}">user </a>
 </div>
 
 <br/>
 <hr/>
 
-<a href="/peoople/new/">Create new person</a>
+<a href="/people/new">Create new person</a>
 </body>
 </html>
